# cloud-storage-proxy

./: Cargo.toml  Dockerfile  config.example.toml  config.toml
.github/workflows/: rust.yml
src/: caching.rs  config.rs  gcs.rs  main.rs
src/caching/: actor.rs  caching.rs  local.rs  messages.rs  mod.rs  redis.rs
src/rate_limiting/: local.rs  messages.rs  mod.rs  rate_limiting.rs
