[package]
name = "cloud-storage-proxy"
version = "0.1.0"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
custom_error = "1.7.1"
toml = "0.5.6"
serde = "1.0.112"
serde_derive = "1.0.112"