[package]
name = "cloud-storage-proxy"
version = "0.1.3"
authors = ["Nikita Volobuev <nikitavbv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2.21", features = ["full"] }
custom_error = "1.7.1"
toml = "0.5.6"
serde = "1.0.112"
serde_derive = "1.0.112"
reqwest = "0.10.6"
openssl = { version = "0.10.29", features = ["vendored"] }
yup-oauth2 = "4.1.2"
serde_json = "1.0.55"
log = "0.4.8"
env_logger = "0.7.1"
ttl_cache = "0.5.1"
async-trait = "0.1.36"
chashmap = "2.2.2"
actix = "0.9.0"
actix-rt = "1.1.1"
actix_derive = "0.5.0"